<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewBinder"
            type="com.png.interview.weather.ui.binder.CurrentWeatherFragmentViewBinder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <AutoCompleteTextView
            android:id="@+id/et_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:afterTextChanged="@{()-> viewBinder.afterInputTextChanged()}"
            android:completionThreshold="3"
            android:hint="@string/enter_zip_or_city"
            android:text="@={viewBinder.input}"
            app:layout_constraintEnd_toStartOf="@id/btn_go"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewBinder.goClicked()}"
            android:text="@string/go"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/view_current_weather_available"
            layout="@layout/view_current_weather_available"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/et_input"
            app:viewData="@{viewBinder.availableWeatherViewData}" />

        <include
            android:id="@+id/view_current_weather_empty"
            layout="@layout/view_current_weather_empty"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:emptyVisible="@{viewBinder.isEmpty}"
            app:hasError="@{viewBinder.hasError}"
            app:layout_constraintTop_toBottomOf="@id/et_input" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/content_barrier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="view_current_weather_available,view_current_weather_empty" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_refresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:onClick="@{() -> viewBinder.refreshClicked()}"
            android:text="@string/refresh"
            app:layout_constraintEnd_toStartOf="@id/btn_forecast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_barrier"
            app:layout_goneMarginTop="16dp"
            app:visible="@{viewBinder.availableWeatherViewData != null}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forecast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewBinder.seeForecastClicked()}"
            android:text="@string/see_forecast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_refresh"
            app:layout_constraintTop_toBottomOf="@id/content_barrier"
            app:layout_goneMarginTop="16dp"
            app:visible="@{viewBinder.availableWeatherViewData != null}" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewBinder.settingsClicked()}"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>