<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.png.interview.weather.ui.model.TemperatureUnit" />

        <variable
            name="viewBinder"
            type="com.png.interview.weather.ui.binder.SettingsFragmentViewBinder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/rd_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rd_group" />

        <RadioGroup
            android:id="@+id/rd_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:dividerPadding="8dp"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_units"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewBinder.imperialSelected}"
                android:onClick="@{() -> viewBinder.imperialClicked()}"
                android:text="@string/imperial" />
<!--                android:checked="@{viewBinder.tempUnit == TemperatureUnit.Imperial.INSTANCE.unit}"-->

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{!viewBinder.imperialSelected}"
                android:onClick="@{() -> viewBinder.metricClicked()}"
                android:text="@string/metric" />
<!--                android:checked="@{viewBinder.tempUnit == `Metric`}"-->
<!--                android:checked="@{viewBinder.tempUnit == TemperatureUnit.Metric.INSTANCE.unit}"-->

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>